# cpp-dp-2024-10-28

./: README.md
.devcontainer/: Dockerfile
Behavioral/: CMakeLists.txt
Behavioral/Chain.TheoryCode/: chain.hpp  main.cpp
Behavioral/Command.Exercise/: CMakeLists.txt  main.cpp
Behavioral/Command.Exercise/gtests/: CMakeLists.txt
Behavioral/Command.Exercise/src/: command.hpp
Behavioral/State.Example/: CMakeLists.txt
Behavioral/State.Example/src/: turnstile.hpp
Behavioral/State.Example/tests/: CMakeLists.txt
Behavioral/State.Exercise/: CMakeLists.txt
Behavioral/Strategy.Exercise/: main.cpp
Behavioral/TemplateMethod.TheoryCode/: template_method.hpp
Behavioral/Visitor.Exercise/: CMakeLists.txt
Creational/AbstractFactory.Example/: monsters.hpp
Creational/AbstractFactory.Exercise/: before.cpp
Creational/Builder.Example/: main.cpp
Creational/FactoryMethod.Example/: main.cpp  rectangle.cpp  shape_factories.hpp  square.cpp
Creational/FactoryMethod.Intro/: factory.hpp  main.cpp
Creational/Prototype.Intro/: main.cpp
OOP/: CMakeLists.txt
OOP/DynamicStaticPolymorphism/: static_dynamic_poly.cpp
Structural/Adapter.Exercise/: text.cpp  text.hpp
Structural/Adapter.TheoryCode/: adapter.hpp
Structural/Bridge.Pimpl/: bitmap.cpp  bitmap.hpp
Structural/Composite.Exercise/: shape_group.hpp
Structural/Composite.TheoryCode/: composite.hpp
Structural/Decorator.Exercise/: main.cpp  starbugs_coffee.hpp
Structural/Decorator.TheoryCode/: decorator.hpp  main.cpp
Structural/Flyweight.Boost/: main.cpp
Structural/Proxy.TheoryCode/: main.cpp
(+4 files in other folders)
